--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,14 @@
 auto: true
 
+markdown: kramdown
 pygments: true
 paginate: 8
 permalink: /:title
 highlighter: rouge
+kramdown:
+	input: GFM
+	auto_ids: true
+	syntax_hightlighter: rouge
 
 title: LightningX' Blog
 feed: /atom.xml
