--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-auto: true
+#auto: true
 
 markdown: kramdown
 pygments: true
 paginate: 8
-permalink: /:title
+permalink: /:title/
 highlighter: rouge
 kramdown:
- input: GFM
- auto_ids: true
- syntax_hightlighter: rouge
+  input: GFM
+  auto_ids: true
+  syntax_hightlighter: rouge
 
 title: LightningX' Blog
 feed: /atom.xml
