--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
-#auto: true
 
 markdown: kramdown
-#pygments: true
 paginate: 8
 permalink: /:title/
 highlighter: rouge
@@ -9,6 +7,8 @@ kramdown:
   input: GFM
   auto_ids: true
   syntax_hightlighter: rouge
+  syntax_hightlighter_opts:
+    css_class: 'highlight'
 
 title: LightningX' Blog
 feed: /atom.xml
